--- a/index.html
+++ b/index.html
@@ -135,12 +135,14 @@
       <p class="mb-0"><b>v!createElection Election Name :</b><em>Creates an election on your server. You <u>must</u> give an election name</em></p>
       <p class="mb-0"><b>v!endElection Election Name:</b><em>Ends and election. When invoked the election results will be displayed in the channel the command was run on</em></p>
       <p class="mb-0"><b>v!audit Election Name:</b><em>Sends all the votes in the election to the channel the command was run on.<u>This command is only to be used to check for suspicious votes</u></em></p>
+      <p class="mb-0"><b>v!add, User, Election Name:</b><em>Adds a candidate to the election. You must give the name and the election you want to add them to.</em></p>
       <div class="h2">User Commands</div>
       <p class="mb-0"><b>v!join Election Name:</b><em> Allows you to join an election as a candidate</em></p>
       <p class="mb-0"><b>v!dropOut Election Name:</b><em> Allows you to drop out of an election, if you are a candidate</em></p>
       <p class="mb-0"><b>v!vote Election Name:</b><em> Allows a candidate to vote. When invoked you will recieve a direct message from the bot witch a list of candidates. You respond with the name of the candidate you wish to vote for.</em></p>
       <p class="mb-0"><b>v!status Election Name:</b><em> Provides an updated list on the vote count of an election.</em></p>
       <p class="mb-0"><b>v!list :</b><em> Returns a list of the names of all the elections on the server</em></p>
+      
         
     </div>
   </section>
